--- a/src/web/index.html
+++ b/src/web/index.html
@@ -1,10 +1,19 @@
 <html>
 
 <head>
-
+    <title>wow</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-45541775-5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-45541775-5');
+    </script>
 </head>
 
 <body>
+    <p>WASD movement</p>
     <script src="./game/launcher.ts"></script>
 </body>
 
