--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,31 @@
 <html>
+    <head>
+        <title>wow</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=UA-45541775-5"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+            gtag('config', 'UA-45541775-5');
+        </script>
+        <link rel="stylesheet" type="text/css" href="style/style.scss" />
+    </head>
 
-<head>
-    <title>wow</title>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-45541775-5"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'UA-45541775-5');
-    </script>
-    <link rel="stylesheet" type="text/css" href="style/style.scss">
-</head>
+    <body>
+        <p>WASD movement</p>
 
-<body>
-    <p>WASD movement</p>
+        <div class="game">
+            <div id="game-view" class="game__view"></div>
+            <div id="game-inspector" class="game__inspector"></div>
+        </div>
 
-    <div class="game">
-        <div id="game-view" class="game__view"></div>
-        <div id="game-inspector" class="game__inspector"></div>
-    </div>
-
-    <script src="./launcher.tsx"></script>
-</body>
-
+        <script src="./launcher.tsx"></script>
+    </body>
 </html>
