--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,10 @@
         <p>WASD movement</p>
 
         <div class="game">
-            <div id="game-view" class="game__view"></div>
+            <div id="game-view" class="game__view">
+                <div id="game-scene" class="game__scene"></div>
+                <div id="game-physics" class="game__physics"></div>
+            </div>
             <div id="game-inspector" class="game__inspector"></div>
         </div>
 
