--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     </head>
 
     <body>
-        <p>WASD movement</p>
+        <p>WASD movement. Space = shoot</p>
 
         <div class="game">
             <div id="game-view" class="game__view">
